--- a/style.css
+++ b/style.css
@@ -1,8 +1,57 @@
-body{
-    background-image: url('img/logo.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    background-attachment: fixed;
-    background-color: #464646;
-}
+    * {
+        margin: 0;
+        padding: 0;
+    }
+    
+    body {
+        background-image: url('img/logo.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+        background-attachment: fixed;
+        background-color: #464646;
+    }
+    
+    nav {
+        background-color: #fff;
+        height: 36px;
+    }
+    
+    nav header {
+        color: red;
+    }
+    /* nav ul {
+        list-style: none;
+    }
+    
+    nav ul li {
+        display: inline-block;
+        float: right;
+    } */
+    
+    nav ul {
+        list-style-type: none;
+        position: absolute;
+        top: -10px;
+        right: 0%;
+        padding: 0;
+        overflow: hidden;
+        /* background-color: #333; */
+    }
+    
+    nav ul li {
+        float: right;
+    }
+    
+    nav ul li a {
+        display: block;
+        color: #000;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
+    /* Change the link color to #111 (black) on hover */
+    
+    nav ul li a:hover {
+        background-color: #fff000;
+    }
